--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -596,20 +596,18 @@ body {
   background-color: white;
   border-radius: 0.8em;
   margin: 20px 0;
-  display: grid;
-  grid-template-columns: 260px 0px 60px;
-  grid-template-areas: "itemTitle itemTitle itemValid" "itemDescription itemPrice itemValid";
-  align-items: stretch;
-  place-content: center;
-  row-gap: 5px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   cursor: pointer;
   width: 320px;
-  height: 66px;
   box-shadow: 0 0.5em 0.5em 0 #d9d9d9;
-  transition: all 800ms;
-  /*&:hover > .menu-item__price {
-      transform: translateX(0);
-  }*/
+}
+.menu-item__main {
+  flex-grow: 1;
+  display: grid;
+  grid-template-areas: "itemTitle itemTitle" "itemDescription itemPrice";
+  grid-template-columns: 1fr 60px;
 }
 .menu-item__title {
   grid-area: itemTitle;
@@ -642,29 +640,25 @@ body {
   font-weight: 500;
 }
 .menu-item__button {
-  grid-area: itemValid;
-  width: 60px;
+  width: 0%;
+  transition: all 800ms;
   background-color: #99E2D0;
   color: white;
   border-radius: 0 0.5em 0.5em 0;
   font-size: 1.4em;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 800ms cubic-bezier(0.2, 1, 0.9, 1);
 }
 .menu-item:hover > .menu-item__button {
-  transform: scaleX(1);
+  width: 20%;
 }
 .menu-item:hover > .menu-item__button .fa-check-circle {
-  transform: translateX(0) rotate(0deg);
-}
-.menu-item:hover {
-  grid-template-columns: 200px 60px 60px;
+  opacity: 1;
+  transform: rotate(0deg);
 }
 .menu-item .fa-check-circle {
   padding: 20px;
-  transform: translateX(60px) rotate(-540deg);
-  transition: transform 800ms cubic-bezier(0.2, 1, 0.9, 1);
+  transform: rotate(-540deg);
+  opacity: 0;
+  transition: all 800ms cubic-bezier(0.2, 1, 0.9, 1);
 }
 
 .command {
