--- a/Assets/css/utils/_mixins.scss
+++ b/Assets/css/utils/_mixins.scss
@@ -40,8 +40,9 @@
         transition: transform 300ms 500ms ease-in-out;
     }
     @if ($version == "nodelay") {
-        transform: translateX(60px) rotate(-540deg);
-        transition: transform 800ms cubic-bezier(.2,1,.9,1);
+        transform: rotate(-540deg);
+        opacity: 0;
+        transition: all 800ms cubic-bezier(.2,1,.9,1);
     }
 }
 
@@ -50,7 +51,8 @@
         transform: rotate(0turn);
     }
     @if ($version == "nodelay") {
-        transform: translateX(0) rotate(0deg);
+        opacity: 1;
+        transform: rotate(0deg);
     }
 }
 
